scented section done, minor alignment issues fixed

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,4 +1,4 @@
-/* @font-face {
+@font-face {
 	font-family: "value-serif";
 	src: url("../fonts/Value\ Serif\ Pro\ Regular.eot");
 	src: url("../fonts/Value\ Serif\ Pro\ Regular.eot") format("embedded-opentype"),
@@ -16,13 +16,13 @@
 		url("../fonts/Value\ Serif\ Pro\ Bold.woff") format("woff"),
 		url("../fonts/Value\ Serif\ Pro\ Bold.ttf") format("truetype");
 	font-display: swap;
-} */
+}
 
 :root {
 	--color-primary: #3350B4;
 	--color-secondary: #FFFFFF;
-	--font-title: sans-serif;
-	--font-primary: sans-serif;
+	--font-title: value-serif-bold;
+	--font-primary: value-serif;
 }
 
 ul {
@@ -61,7 +61,7 @@ hr {
 }
 
 .main-title {
-	font-family: var(--font-title);
+	font-family: var(--font-title) !important;
 }
 
 .section-title-small {
@@ -90,6 +90,7 @@ hr {
 	font-weight: 600;
 	width: auto;
 }
+
 .btn2 {
 	font-weight: 600;
 	width: auto;
@@ -101,11 +102,11 @@ hr {
 }
 
 .text {
-	font-family: var(--font-primary);
+	font-family: var(--font-primary) !important;
 }
 
 body {
-	font-family: sans-serif;
+	font-family: var(--font-primary) !important;
 	letter-spacing: 0.5px;
 	color: #434448;
 	scroll-behavior: smooth;
@@ -392,8 +393,8 @@ header {
 
 .carousel-control-prev.disabled,
 .carousel-control-next.disabled {
-    cursor: not-allowed;
-    opacity: 0.5; /* You can adjust the opacity to your preference */
+	cursor: not-allowed;
+	opacity: 0.5;
 }
 
 .carousel-control-prev {
@@ -654,7 +655,7 @@ header {
 .owl-controls .owl-buttons .owl-prev {
 	background: #fff;
 	position: absolute;
-	bottom: -13%;
+	bottom: 13%;
 	left: 15px;
 	padding: 0 18px 0 15px;
 	border-radius: 50px;
@@ -664,7 +665,7 @@ header {
 .owl-controls .owl-buttons .owl-next {
 	background: #fff;
 	position: absolute;
-	bottom: -13%;
+	bottom: 13%;
 	right: 15px;
 	padding: 0 15px 0 18px;
 	border-radius: 50px;
@@ -686,5 +687,55 @@ header {
 @media only screen and (max-width:1280px) {
 	.post-slide .post-content {
 		padding: 0px 15px 25px 15px;
+	}
+}
+
+/* SCENTED PRODUCTS  */
+.main-container {
+	height: 514px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.card-container {
+	border: 1px solid #ccc;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	margin: 0 10px;
+	padding: 10px;
+	text-align: center;
+}
+
+.card-container img {
+	width: 320px;
+	height: 340px;
+	margin: 5px 0;
+}
+
+.accordion-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.accordion-body img {
+    margin: 0; /* Remove default margin for the image */
+}
+.large-screen {
+	display: block;
+}
+
+.mobile-screen {
+	display: none;
+}
+
+@media (max-width: 1068px) {
+	.large-screen {
+		display: none;/
+	}
+
+	.mobile-screen {
+		display: block;
 	}
 }
